# languages

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/.workflows/: prod.yml
migrations/: 20231101134558_languages_table.down.sql  20231101134558_languages_table.up.sql
settings/: base.yaml  development.yaml  production.yaml
src/: lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/languages/: controllers.rs  entities.rs  managers.rs  mod.rs  queries.rs  repositories.rs
src/ping/: controllers.rs
